[package]
name = "packets"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
macros = { path = "../macros" }
utils = { path = "../utils" }
