[package]
name = "utils"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
libdeflater = "0.7.1"
mio = { version = "0.7.11", features = ["os-poll", "net"] }